# Remake_Node_Apps_In_Rust

./: .gitignore  README.md
axum_learning/: Cargo.toml
axum_learning/src/: main.rs  routes.rs
ex-01-math-api/: Cargo.toml
ex-01-math-api/src/: main.rs  math_router.rs  router.rs
ex-02-random-quotes/: Cargo.toml
ex-02-random-quotes/src/: main.rs  quotes_struct.rs  routes.rs
ex-02-random-quotes/src/routes/: random_quotes.rs
ex-02-random-quotes/src/view/: mod.rs
ex-03-weather-api/: Cargo.toml
ex-03-weather-api/src/: main.rs  routes.rs
ex-03-weather-api/src/modules/: mod.rs
ex-04-cocktails/: Cargo.toml
ex-04-cocktails/src/: main.rs
ex-04-cocktails/src/modules/: mod.rs
ex-04-cocktails/src/routes/: mod.rs
ex-05-caesar-cypher/: Cargo.toml
ex-05-caesar-cypher/src/: main.rs  the_middleware.rs
ex-05-caesar-cypher/src/modules/: mod.rs  my_cypher.rs  my_middleware.rs
ex-05-caesar-cypher/src/routes/: mod.rs
ex-06-bookstore-app/: Cargo.toml  books.json
ex-06-bookstore-app/src/: lib.rs  main.rs  middleware.rs
ex-06-bookstore-app/src/routes/: delete_requests.rs  get_requests.rs  mod.rs  post_requests.rs  put_requests.rs
ex-06-bookstore-app/tests/: test_delete.rs  test_get.rs  test_post.rs  test_put.rs
non_blocking_io/: Cargo.toml
non_blocking_io/src/: main.rs
